[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/you_died.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/GameOver.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "GameOverAnimation"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 400 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "modulation"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Game Over" type="Node2D"]
pause_mode = 2
visible = false
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="YouDied" type="Label" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 400.0
margin_bottom = 400.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.0784314, 1, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "YOu DlED"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverAnimation" type="AnimationPlayer" parent="CanvasLayer/YouDied"]
anims/GameOverAnimation = SubResource( 1 )

[node name="Buttons" type="Node2D" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )

[node name="RestartLevelButton" type="Button" parent="CanvasLayer/Buttons"]
margin_left = 436.862
margin_top = 330.0
margin_right = 587.862
margin_bottom = 368.0
rect_pivot_offset = Vector2( 117.908, 70.3855 )
text = "Restart Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="CanvasLayer/Buttons"]
margin_left = 435.768
margin_top = 380.0
margin_right = 586.768
margin_bottom = 418.0
rect_pivot_offset = Vector2( 117.908, 70.3855 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsAppear" type="AnimationPlayer" parent="CanvasLayer/Buttons"]
anims/modulation = SubResource( 2 )

[connection signal="animation_finished" from="CanvasLayer/YouDied/GameOverAnimation" to="." method="_on_GameOverAnimation_animation_finished"]
[connection signal="pressed" from="CanvasLayer/Buttons/RestartLevelButton" to="." method="_on_RestartLevelButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
